bk_ida/gccida/c1/reload_combine_note_use
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/reload1.c:9474:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v11] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/reload1.c:9504:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)v2->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/reload1.c:9508:15: error: use of undeclared identifier 'off_6CC868'
fancy_abort( &off_6CC868[4], 8994, "reload_combine_note_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/reload1.c:9516:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)v2[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/reload1.c:9522:15: error: use of undeclared identifier 'off_6CC868'
fancy_abort( &off_6CC868[4], 9015, "reload_combine_note_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/reload1.c:9527:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v20 = ( ( unsigned int)( mode_class_0[v19] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_combine_note_use/src/obj/reload1.o] Error 1
